syntax = "proto3";

package Contracts.Abstractions.Protobuf;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message GetResponse{
  oneof OneOf{
    google.protobuf.Any Projection = 1;
    NotFound NotFound = 2;
  }
}

message ListResponse{
  oneof OneOf{
    PagedResult PagedResult = 1;
    NoContent NoContent = 2;
  }
}

message PagedResult{
  repeated google.protobuf.Any Projections = 1;
  Page page = 2;
}

message Page{
  int32 Current = 1;
  int32 Size = 2;
  bool HasNext = 3;
  bool HasPrevious = 4;
}

message NoContent {}

message NotFound {}

message Paging {
  google.protobuf.Int32Value Limit = 1;
  google.protobuf.Int32Value Offset = 2;
}

message Price{
  string Cost = 1;
  float Discount = 2;
}

message Person {
  string Name = 1;
  string Image = 2;
  string Address = 3;
  string Phone = 4;
}

message Dish {
    string Name = 1;
    string Image = 2;
    string Description = 3;
}

message Search {
    repeated string Category = 1;
    repeated string Nation = 2;
}

message Address {
    string Location = 1;
    repeated float Center = 2;
}

